--- a/build.gradle
+++ b/build.gradle
@@ -12,4 +12,5 @@ repositories {
 
 dependencies {
     implementation("net.dv8tion:JDA:5.0.0-alpha.13")
+    implementation("org.reflections:reflections:0.10.2")
 }
